Change title to 'Posters-for-Venezuela'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>FREE VENEZUELA FROM U.S IMPERIALISM//Καλλιτεχνική Κολεκτίβα</title>
+<title>Posters-for-Venezuela</title>
 </head><head><style>
 h1 {
       background-color: #ffd700;
