Fix font-family typo in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head><head><style>
 h1 {
       background-color: #ffd700;
-	  font-family: 'BTtypewirte';
+	  font-family: 'BPtypewirte';
       color: #101D6B; /* Text color set to white */
     }
 h3, h4, h5 {
