--- a/afisa1.html
+++ b/afisa1.html
@@ -2,6 +2,6 @@
 <body bgcolor="#101D6B" text="#ff0000" link="#ffffff" vlink="#ffffff"> 
 <h2>Αφίσα / Poster (1)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa2.html"><h3 align="right"><blink>Next</blink></h3></a> 
-<center><img src="paradigma.jpg" style="width: 300px; height: auto;"/><p>
+<center><img src="Καρ.png" style="width: 300px; height: auto;"/><p>
 <h3><i>Titlos....</i></h3></p>
 </body></html>
