--- a/afisa2.html
+++ b/afisa2.html
@@ -1,4 +1,4 @@
-<html><title>Maggie Makri/Alafroiskiotos</title>
+<html><title>Posters for Venezuela</title>
 <body bgcolor="#101D6B" text="#ff0000" link="#ffffff" vlink="#ffffff"> 
 <h2>Αφίσα / Poster (2)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa3.html"><h3 align="right"><blink>Next</blink></h3></a> 
