Fix image filename in afisa2.html

--- a/afisa2.html
+++ b/afisa2.html
@@ -2,6 +2,6 @@
 <body bgcolor="#101D6B" text="#ff0000" link="#ffffff" vlink="#ffffff"> 
 <h2>Αφίσα / Poster (2)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa3.html"><h3 align="right"><blink>Next</blink></h3></a> 
-<center><img src="Δ.Ζ.jpg" style="width: 300px; height: auto;"/><p>
+<center><img src="ΔΖ.jpg" style="width: 300px; height: auto;"/><p>
 <h3><i>Titlos....</i></h3></p>
 </body></html>
