--- a/afisa1.html
+++ b/afisa1.html
@@ -3,5 +3,5 @@
 <h2>Αφίσα / Poster (1)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa2.html"><h3 align="right"><blink>Next</blink></h3></a> 
 <center><img src="VENEZUELA WILL BE YOUR VIETNAM.jpg" style="width: 400px; height: auto;"/><p>
-<h3><i>Titlos....</i></h3></p>
+<h3><i>Venezuela Will Be Your Vietnam,</i> 2026</h3></p>
 </body></html>
