Add title to the poster in afisa3.html

--- a/afisa3.html
+++ b/afisa3.html
@@ -3,5 +3,5 @@
 <h2>Αφίσα / Poster (3)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa4.html"><h3 align="right"><blink>Next</blink></h3></a> 
 <center><img src="Contra El Imperialismo Americano.jpg" style="width: 300px; height: auto;"/><p>
-<h3><i></i></h3></p>
+<h3><i>Contra El Imperialismo Americano,</i> 2026</h3></p>
 </body></html>
