Update title in afisa4.html

--- a/afisa4.html
+++ b/afisa4.html
@@ -3,5 +3,5 @@
 <h2>Αφίσα / Poster (4)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa5.html"><h3 align="right"><blink>Next</blink></h3></a> 
 <center><img src="poster ven mm.jpg" style="width: 400px; height: auto;"/><p>
-<h3><i>Titlos....</i></h3></p>
+<h3><i>American Imperialism Toy Set,</i> 2026</h3></p>
 </body></html>
