--- a/afisa3.html
+++ b/afisa3.html
@@ -2,6 +2,6 @@
 <body bgcolor="#101D6B" text="#ff0000" link="#ffffff" vlink="#ffffff"> 
 <h2>Αφίσα / Poster (3)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa4.html"><h3 align="right"><blink>Next</blink></h3></a> 
-<center><img src="Contra El Imperialismo Americano.jpg" style="width: 300px; height: auto;"/><p>
+<center><img src="EA.jpg" style="width: 300px; height: auto;"/><p>
 <h3><i>Contra El Imperialismo Americano,</i> 2026</h3></p>
 </body></html>
