Update link for International Statement article

--- a/keimena.html
+++ b/keimena.html
@@ -3,6 +3,6 @@ h1, h2, h3, h4 {
 	  font-family: 'Courier new';</style></head>
 <body bgcolor="#FFDBBB" text="#ff0000" link="#000000" vlink="#000000"> 
 <h1>Κείμενα / Texts</h1><br>
-<center><p><a href="International Statement.html"><h2><i>International Statement: We Denounce the Imperial Offensive on Venezuela</i>, 2025</h2></a></p><br>
+<center><p><a href="https://theanarchistlibrary.org/library/international-statement-we-denounce-the-imperial-offensive-on-venezuela?__switch_theme=1"><h2><i>International Statement: We Denounce the Imperial Offensive on Venezuela</i>, 2025</h2></a></p><br>
 <p><a href="The forest behind the trees.html"><h3><i>The forest behind the trees,</h3><h4>What’s behind the US occupation of Haiti?</i> January 25, 2010</h4></a></p>
 </body></html>
