--- a/afisa6.html
+++ b/afisa6.html
@@ -2,6 +2,6 @@
 <body bgcolor="#101D6B" text="#ff0000" link="#ffffff" vlink="#ffffff"> 
 <h2>Αφίσα / Poster (6)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa7.html"><h3 align="right"><blink>Next</blink></h3></a> 
-<center><img src="KAR.png" style="width: 500px; height: auto;"/><p>
+<center><img src="theywillneverstop.png" style="width: 500px; height: auto;"/><p>
 <h3><i>They wil never stop taking,</i> 2026</h3></p>
 </body></html>
