--- a/afisa7.html
+++ b/afisa7.html
@@ -4,7 +4,7 @@
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa8.html"><h3 align="right"><blink>Next</blink></h3></a> 
 <center><img src="Nick Tragg.png" style="width: 600px; height: auto;"/><p>
 <h3><i>They wil never stop taking,</i> 2026</h3></p><br>
-<p>Έχω γίνει καλός στο να ζωγραφίζω ερείπια.<br>
+<p><i>Έχω γίνει καλός στο να ζωγραφίζω ερείπια.</i><br>
 Κατέκτησα την τεχνική της μουτζούρας. Χαλίκια, σπασμένοι τοίχοι, ισοπεδωμένα θεμέλια, όλα αποτυπώνονται μόνο με μερικές ατσουμπαλες αλλά στοχευμένες κινήσεις. 
 Αναγκάστηκα όμως να την μάθω αυτή την τεχνική. Καθώς τα τοπία με ερείπια γύρω μας είναι τόσα, που δεν προλαβαίνω να τα αποτυπώσω αλλιώς. Ακόμα δεν προλαβαίνω να τα αποτυπώσω όλα.<br>
 
