--- a/afisa7.html
+++ b/afisa7.html
@@ -1,22 +1,37 @@
 <html><title>Posters for Venezuela</title>
+<head><style>
+h3, h4, h5 {
+	  font-family: 'Courier new';
+      color: #FFFDBC; /* Text color set to white */
+    }
+	</style></head>
 <body bgcolor="#101D6B" text="#ff0000" link="#ffffff" vlink="#ffffff"> 
 <h2>Αφίσα / Poster (7)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa8.html"><h3 align="right"><blink>Next</blink></h3></a> 
 <center><img src="Nick Tragg.png" style="width: 600px; height: auto;"/><p>
-<h3><i>They wil never stop taking,</i> 2026</h3></p><br>
-<p><i>Έχω γίνει καλός στο να ζωγραφίζω ερείπια.</i><br>
-Κατέκτησα την τεχνική της μουτζούρας. Χαλίκια, σπασμένοι τοίχοι, ισοπεδωμένα θεμέλια, όλα αποτυπώνονται μόνο με μερικές ατσουμπαλες αλλά στοχευμένες κινήσεις. 
-Αναγκάστηκα όμως να την μάθω αυτή την τεχνική. Καθώς τα τοπία με ερείπια γύρω μας είναι τόσα, που δεν προλαβαίνω να τα αποτυπώσω αλλιώς. Ακόμα δεν προλαβαίνω να τα αποτυπώσω όλα.<br>
+<h3><i>Smile You Are Free,</i> 2026</h3></p><br>
+<p><h2><i>Έχω γίνει καλός στο να ζωγραφίζω ερείπια.</i></h2>
+<p><h3 color="#FFFBDC">
+Κατέκτησα την τεχνική της μουτζούρας. Χαλίκια, σπασμένοι τοίχοι, ισοπεδωμένα θεμέλια,<br>
+όλα αποτυπώνονται μόνο με μερικές ατσουμπαλες αλλά στοχευμένες κινήσεις.<br> 
+Αναγκάστηκα όμως να την μάθω αυτή την τεχνική. Καθώς τα τοπία με ερείπια γύρω μας είναι τόσα,<br>
+που δεν προλαβαίνω να τα αποτυπώσω αλλιώς. Ακόμα δεν προλαβαίνω να τα αποτυπώσω όλα.<br><br>
 
-Τα τελευταία χρόνια η πολιτική τέχνη είναι χαρακτηριστικό του έργου μου. Το όποιο κοινό έχω, κυρίως με αυτήν μου την πτυχή έχει έρθει πιο κοντά.<br>
+Τα τελευταία χρόνια η πολιτική τέχνη είναι χαρακτηριστικό του έργου μου.<br>
+Το όποιο κοινό έχω, κυρίως με αυτήν μου την πτυχή έχει έρθει πιο κοντά.<br>
+Όμως η αλήθεια είναι πως αυτή δεν είναι η τέχνη που θέλω να κάνω.<br>
+Θα ήταν οξύμωρο εξάλλου. Γιατί να ΘΕΛΩ να κάνω τέτοια τέχνη;<br>
+Γιατί να θέλω να γεμίζω τα έργα μου με πραγματικές τραγωδίες;<br> 
+Γιατί να ζωγραφίζω ερείπια στην Γάζα αντί φανταστικούς κόσμους;<br> Γιατί να θέλω να ζωγραφίζω γαμημένους μπάτσους;<br><br>
+Δεν θέλω. Αλλά δεν μπορώ να κάνω κι αλλιώς.<br><br>
+Αυτή η τέχνη είναι η έκρηξη οργής, ο ενθουσιασμός του αγώνα, ο ηχηρός λυγμός μου.<br>
+Αυτή η τέχνη είναι που με κάνει να μπορώ να κοιμάμαι έστω και λίγο καλύτερα τα βράδια.<br>
+Οπότε δεν σταματάω. Αυτό που συνέβη στην Βενεζουέλα στην αρχή του χρόνου ήταν εν μέρει<br>
+αναμενόμενο, αλλά τραγικό. Ζούμε σε μια εποχή που ο φασισμός κανονικοποιειται ξανά.<br> 
+Μπορείς να ξεκάθαρα πως είσαι φασίστας, κι η κοινωνία θα σε ανταμείψει.<br>
+Στην ίδια μας την χώρα το βλέπουμε παντού γύρω μας. Δεν γίνεται να περάσει.<br><br>
 
-Όμως η αλήθεια είναι πως αυτή δεν είναι η τέχνη που θέλω να κάνω. Θα ήταν οξύμωρο εξάλλου. Γιατί να ΘΕΛΩ να κάνω τέτοια τέχνη; Γιατί να θέλω να γεμίζω τα έργα μου με πραγματικές τραγωδίες; 
-  Γιατί να ζωγραφίζω ερείπια στην Γάζα αντί φανταστικούς κόσμους; Γιατί να θέλω να ζωγραφίζω γαμημένους μπάτσους;<br>
-
-Δεν θέλω. Αλλά δεν μπορώ να κάνω κι αλλιώς.<br>
-Αυτή η τέχνη είναι η έκρηξη οργής, ο ενθουσιασμός του αγώνα, ο ηχηρός λυγμός μου. Αυτή η τέχνη είναι που με κάνει να μπορώ να κοιμάμαι έστω και λίγο καλύτερα τα βράδια. Οπότε δεν σταματάω.<br>
-Αυτό που συνέβη στην Βενεζουέλα στην αρχή του χρόνου ήταν εν μέρει αναμενόμενο, αλλά τραγικό. Ζούμε σε μια εποχή που ο φασισμός κανονικοποιειται ξανά. 
-Μπορείς να ξεκάθαρα πως είσαι φασίστας, κι η κοινωνία θα σε ανταμείψει. Στην ίδια μας την χώρα το βλέπουμε παντού γύρω μας. Δεν γίνεται να περάσει.<br>
-
-Έχω κουραστεί να ζωγραφίζω ερείπια. Αλλά θα συνεχίσω να τα ζωγραφίζω, μέχρι να καταφέρουμε να βγούμε από αυτά.</p>
+Έχω κουραστεί να ζωγραφίζω ερείπια.<br> 
+Αλλά θα συνεχίσω να τα ζωγραφίζω, μέχρι να καταφέρουμε να βγούμε από αυτά.</h3></p><br><br>
+<p>Κείμενο του δημιουργού Ν.Τ</p>
 </body></html>
