--- a/afisa1.html
+++ b/afisa1.html
@@ -1,6 +1,6 @@
-<html><title>Posters for Venezuela</title>
+<html><title>Αφίσες για τη Βενεζουέλα/Carteles Para Venezuela</title>
 <body bgcolor="#101D6B" text="#ff0000" link="#ffffff" vlink="#ffffff"> 
-<h2>Αφίσα / Poster (1)</h2>
+<h2>Αφίσα / Póster (1)</h2>
 <p><img src="handblue.gif" align="right" style="width: 69px; height: auto;"/><a href="afisa2.html"><h3 align="right"><blink>Next</blink></h3></a> 
 <center><img src="VENEZUELA WILL BE YOUR VIETNAM.jpg" style="width: 400px; height: auto;"/><p>
 <h3><i>Venezuela Will Be Your Vietnam,</i> 2026</h3></p>
