--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ h3, h4, h5 {
 	</style></head>
 <body bgcolor="#101D6B" body text="#000000" link="#ff0000" vlink="#ff0000">
 <center><p>
-<p><h1>Καλλιτεχνική Συσπείρωση Eνάντια στον Iμπεριαλισμό</h1></p></center><h1></h1></a><br>
+<p><h1>Καλλιτεχνική Συσπείρωση Eνάντια στον Iμπεριαλισμό</h1><br><h2>Rally Artístico Enada al Imperialismo</h2></p></center><h1></h1></a><br>
  <p>
     <img src="handblue.gif" style="width: 69px; height: auto;"/>
     <a href="afisa1.html"> ΑΦΙΣΕΣ / POSTERS</a>
     <br><hr>
   </p>
-<center><strong><h3>Αντι-Ιμπεριαλιστικές Αφίσες / Anti-imperialist posters</h3><p><h4>για / for</h4><p><h3>τη Βενιζουέλα / Venezuela</h3><p><hr>
+<center><strong><h3>Αντι-Ιμπεριαλιστικές Αφίσες / Carteles anti-imperialistas</h3><p><h4>για / para</h4><p><h3>τη Βενιζουέλα / Venezuela</h3><p><hr>
 <img src=protest.gif width=30% height=30%><br>
 <h5>Baltimore protest 5/1/26</h5><p><hr></center>
-<pre><h5><a href="keimena.html"><h2>Κείμενα/Texts</h2></a>
-<a href="links.html"><h2>Links</h2></a>
+<pre><h5><a href="keimena.html"><h2>Κείμενα/Textos</h2></a>
+<a href="links.html"><h2>/Σύνδεσμοι/Enlaces</h2></a>
 <h4>AntiCopyright - Last Update-20/1/26</h4></pre>
 </body>
 </html>
