--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ h3, h4, h5 {
 <center><strong><h3>Αντι-Ιμπεριαλιστικές Αφίσες / Carteles anti-imperialistas</h3><p><h4>για / para</h4><p><h3>τη Βενιζουέλα / Venezuela</h3><p><hr>
 <img src=protest.gif width=30% height=30%><br>
 <h5>Baltimore protest 5/1/26</h5><p><hr></center>
-<pre><h5><a href="keimena.html"><h2>Κείμενα/Textos</h2></a>
-<a href="links.html"><h2>/Σύνδεσμοι/Enlaces</h2></a>
+<pre><h5><a href="keimena.html"><h2>Κείμενα / Textos</h2></a>
+<a href="links.html"><h2>Σύνδεσμοι / Enlaces</h2></a>
 <h4>AntiCopyright - Last Update-20/1/26</h4></pre>
 </body>
 </html>
