--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h3, h4, h5 {
 <p><h1>Καλλιτεχνική Συσπείρωση Eνάντια στον Iμπεριαλισμό</h1><br><h2>Rally Artístico Enada al Imperialismo</h2></p></center></a><br>
  <p>
     <img src="handblue.gif" style="width: 69px; height: auto;"/>
-    <a href="afisa1.html"> ΑΦΙΣΕΣ / POSTERS</a>
+    <a href="afisa1.html"> ΑΦΙΣΕΣ / CARTELES</a>
     <br><hr>
   </p>
 <center><strong><h3>Αντι-Ιμπεριαλιστικές Αφίσες / Carteles anti-imperialistas</h3><p><h4>για / para</h4><p><h3>τη Βενιζουέλα / Venezuela</h3><p><hr>
