--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Posters-for-Venezuela</title>
 </head><head><style>
-h1, h2 {
+h1 {
       background-color: #ffd700;
 	  font-family: 'BPtypewirte';
       color: #101D6B; /* Text color set to white */
@@ -14,7 +14,7 @@ h3, h4, h5 {
 	</style></head>
 <body bgcolor="#101D6B" body text="#000000" link="#ff0000" vlink="#ff0000">
 <center><p>
-<p><h1>Καλλιτεχνική Συσπείρωση Eνάντια στον Iμπεριαλισμό</h1><br><h2>Rally Artístico Enada al Imperialismo</h2></p></center></a><br>
+<p><h1>Καλλιτεχνική Συσπείρωση Eνάντια στον Iμπεριαλισμό / Rally Artístico Enada al Imperialismo</h1><br></p></center></a><br>
  <p>
     <img src="handblue.gif" style="width: 69px; height: auto;"/>
     <a href="afisa1.html"> ΑΦΙΣΕΣ / CARTELES</a>
