--- a/Σύνδεσμοι.html
+++ b/Σύνδεσμοι.html
@@ -3,6 +3,6 @@ h1, h2, h3, h4 {
 	  font-family: 'Courier new';</style></head>
 <body bgcolor="#FFDBBB" text="#ff0000" link="#000000" vlink="#000000"> 
 <h1>Σύνδεσμοι / Εnlaces</h1><br>
-<center><p><a href="https://youtu.be/V6FTJYqYvMw?si=2S_Q924S6zQymV9R"><h2><i>The War on Democracy</i>, John Pilger Documentary 2007</h2></a></p><br>
-<p><a href="https://www.youtube.com/watch?v=6FNOm8hY1QU"><h2>Michael Parenti "Imperialism, Drugs and Social Control"</h2></a></p><img src="MP.png" align="middle" style="width: 100px; height: auto;"/>
+<center><p><a href="https://youtu.be/V6FTJYqYvMw?si=2S_Q924S6zQymV9R"><h3><i>The War on Democracy</i>, John Pilger Documentary 2007</h3></a></p><br>
+<img src="MP.png" align="middle" style="width: 190px; height: auto;"/><p><a href="https://www.youtube.com/watch?v=6FNOm8hY1QU"><h3>Michael Parenti "Imperialism, Drugs and Social Control"</h3></a></p>
 </body></html>
