--- a/Σύνδεσμοι.html
+++ b/Σύνδεσμοι.html
@@ -6,3 +6,5 @@ h1, h2, h3, h4 {
 <center><p><a href="https://youtu.be/V6FTJYqYvMw?si=2S_Q924S6zQymV9R"><h3><i>The War on Democracy</i>, John Pilger Documentary 2007</h3></a></p><br>
 <img src="MP.png" align="middle" style="width: 190px; height: auto;"/><p><a href="https://www.youtube.com/watch?v=6FNOm8hY1QU"><h3>Michael Parenti "Imperialism, Drugs and Social Control"</h3></a></p>
 </body></html>
+<a href="https://www.youtube.com/watch?v=6FNOm8hY1QU"><h3>Michael Parenti <i>"Democracy vs US Domination"</i>, Lecture</h3></a></p>
+</body></html>
