--- a/keimena.html
+++ b/keimena.html
@@ -4,5 +4,5 @@ h1, h2, h3, h4 {
 <body bgcolor="#FFDBBB" text="#ff0000" link="#000000" vlink="#000000"> 
 <h1>Κείμενα / Texts</h1><br>
 <center><p><a href="https://theanarchistlibrary.org/library/international-statement-we-denounce-the-imperial-offensive-on-venezuela?__switch_theme=1"><h2><i>International Statement: We Denounce the Imperial Offensive on Venezuela</i>, 2025</h2></a></p><br>
-<p><a href="The forest behind the trees.html"><h3><i>The forest behind the trees,</h3><h4>What’s behind the US occupation of Haiti?</i> January 25, 2010</h4></a></p>
+<p><a href="The forest behind the trees.html"><h3><i>The forest behind the trees,</h3><h4>What’s behind the US occupation of Haiti?</i> January 25, 2010</h4></a></p><div class="tenor-gif-embed" data-postid="25566791" data-share-method="host" data-aspect-ratio="1" data-width="20%"><a href="https://tenor.com/view/bookworm-books-book-gif-25566791">Bookworm Books Sticker</a>from <a href="https://tenor.com/search/bookworm-stickers">Bookworm Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </body></html>
