--- a/Σύνδεσμοι.html
+++ b/Σύνδεσμοι.html
@@ -2,8 +2,7 @@
 h1, h2, h3, h4 {
 	  font-family: 'Courier new';</style></head>
 <body bgcolor="#FFDBBB" text="#ff0000" link="#000000" vlink="#000000">
-<div class="tenor-gif-embed" data-postid="14504066532063337231" data-share-method="host" data-aspect-ratio="1.05508" data-width="20%"><a href="https://tenor.com/view/tv-gif-14504066532063337231">Tv Sticker</a>from <a href="https://tenor.com/search/tv-stickers">Tv Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-<h1>Σύνδεσμοι / Εnlaces</h1><br>
+<h1>Σύνδεσμοι / Εnlaces</h1><br><div class="tenor-gif-embed" data-postid="14504066532063337231" data-share-method="host" data-aspect-ratio="1.05508" data-width="8%"><a href="https://tenor.com/view/tv-gif-14504066532063337231">Tv Sticker</a>from <a href="https://tenor.com/search/tv-stickers">Tv Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 <center><p><a href="https://youtu.be/V6FTJYqYvMw?si=2S_Q924S6zQymV9R"><h3><i>The War on Democracy</i>, John Pilger Documentary 2007</h3></a></p><br>
 <img src="MP.png" align="middle" style="width: 190px; height: auto;"/><p><a href="https://www.youtube.com/watch?v=6FNOm8hY1QU"><h3>Michael Parenti "Imperialism, Drugs and Social Control"</h3></a></p>
 </body></html>
