--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h3, h4, h5 {
     <a href="afisa1.html"> ΑΦΙΣΕΣ / CARTELES</a>
     <br><hr>
   </p>
-<center><strong><h3>Αντι-Ιμπεριαλιστικές Αφίσες / Carteles anti-imperialistas</h3><p><h4>για / para</h4><p><h3>τη Βενιζουέλα / Venezuela</h3><p><hr>
+<center><strong><h3>Αντι-Ιμπεριαλιστικές Αφίσες / Carteles anti-imperialistas</h3><p><h4>για / para</h4><p><h3>τη Βενεζουέλα / Venezuela</h3><p><hr>
 <img src=protest.gif width=30% height=30%><br>
 <h5>Baltimore protest 5/1/26</h5><p><hr></center>
 <pre><h5><a href="keimena.html"><h2>Κείμενα / Textos</h2></a>
