--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h3, h4, h5 {
     <br><hr>
   </p>
 <center><strong><h3>Αντι-Ιμπεριαλιστικές Αφίσες / Carteles anti-imperialistas</h3><p><h4>για / para</h4><p><h3>τη Βενεζουέλα / Venezuela</h3><p><hr>
-<img src=protest.gif width=30% height=30%> <img src=posters2.jpg width=15% height=30%> <br>
+<img src=foto_no_efix.jpg width=10% height=40%>  <img src=posters2.jpg width=15% height=40%> <br>
 <h5>Baltimore protest 5/1/26</h5><p><hr></center>
 <pre><h5><a href="keimena.html"><h2>Κείμενα / Textos</h2></a>
 <a href="Σύνδεσμοι.html"><h2>Σύνδεσμοι / Enlaces</h2></a>
